results/SpecGenBench/0-shot/log-NumberOfCutsSeq-2023_11_28_23_46_29.txt
class NumberOfCutsSeq {
    //@ requires n >= 1;
    //@ ensures \result >= 0;
    public int numberOfCuts(int n) {
        //@ assert n >= 1;
        //@ assert n % 2 == 0 || n % 2 != 0;
        //@ assert n % 2 == 0 ==> \result == n / 2;
        //@ assert n % 2 != 0 ==> \result == n;
        return ((n == 1) ? 0 : ((n % 2 == 0) ? (n / 2) : n));
    }
}
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:7: error: A \result expression may not be in a assert clause
        //@ assert n % 2 == 0 ==> \result == n / 2;
                                   ^
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:8: error: A \result expression may not be in a assert clause
        //@ assert n % 2 != 0 ==> \result == n;
                                   ^
2 errors

